Build universal binary for Intel and Apple silicon
Xcode 12.2 adds support for arm64 on macOS

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC=cc
-CFLAGS=-Wall -O2 -mmacosx-version-min=10.6 -arch x86_64
+CFLAGS=-Wall -O2 -mmacosx-version-min=10.6 -arch x86_64 -arch arm64
 
 prefix=/usr/local
 
